# torana

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  QUICK_START.md  README.md  SECURITY.md  TESTING.md  caddy.rs.toml  torana.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
bench/: README.md  bench.sh  docker-compose.yml
bench/backend/: index.html
bench/configs/: Caddyfile  caddyrs.toml  nginx-proxy.conf
docs/: QUICK_START.md  SCRIPTS_OVERVIEW.md  TESTING.md
docs/plans/: 2026-04-11-caddyrs-v0.1-implementation.md  2026-04-11-torana-v0.1-implementation.md
examples/full-stack-demo/: .gitignore  README.md
examples/full-stack-demo/api/: server.js
examples/full-stack-demo/deploy/: api.service  frontend.service  torana.local.toml  torana.prod.toml  torana.service
examples/full-stack-demo/frontend/: index.html  server.js
scripts/: gen-certs.sh  run-all-tests.sh  setup.sh  start-app.sh  test-acme-e2e.sh  test-basic-http.sh  test-concurrent-load.sh  test-config-reload.sh  test-https.sh  test-memory.sh  test-metrics.sh  test-startup.sh
site/: index.html
src/: config.rs  logging.rs  main.rs  metrics.rs  proxy.rs  reload.rs  tls.rs  upstream.rs
tests/: integration_test.rs
tests/fixtures/: basic.toml  https.toml  lb.toml
torana/: Cargo.toml
torana-core/: Cargo.toml
torana-core/src/: acme.rs  config.rs  health.rs  lib.rs  logging.rs  metrics.rs  plugin.rs  proxy.rs  reload.rs  routing.rs  server.rs  tls.rs  upstream.rs
torana/src/: main.rs
torana/tests/: acme_e2e.rs  integration_test.rs
web/: README.md  astro.config.mjs  package-lock.json  package.json
web/public/: robots.txt
web/src/components/: CodeBlock.astro  Footer.astro  Header.astro  PhysicsHero.astro
web/src/layouts/: BaseLayout.astro  DocsLayout.astro
web/src/pages/: index.astro
web/src/pages/docs/: benchmarking.astro  configuration.astro  deployment.astro  embedding.astro  http2-acme.astro  index.astro  installation.astro  observability.astro  plugins.astro  quickstart.astro  roadmap.astro  security.astro  signals.astro  troubleshooting.astro
web/src/styles/: global.css
