[package]
name = "torana-core"
description = "Embeddable reverse proxy engine: TLS termination, weighted load balancing, health checks, sandboxed WASM plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "signal", "sync", "time", "io-util", "macros"] }
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1.5"
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.14"
thiserror = "2.0"
anyhow = "1.0"
wasmtime = { version = "47", optional = true }
rustls-acme = { version = "0.15", default-features = false, features = ["ring", "tokio", "webpki-roots"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
futures = { version = "0.3", optional = true }

[features]
# Off by default: wasmtime adds several MB and a Cranelift dependency, which
# conflicts with torana's small-binary story. Opt in with --features plugins.
plugins = ["dep:wasmtime"]
# Off by default: pulls in a second ACME-flavored dependency tree. Opt in
# with --features acme.
acme = ["dep:rustls-acme", "dep:tokio-util", "dep:futures"]

[dev-dependencies]
rcgen = "0.14"
